# cursor

./: CMakeLists.txt  Dockerfile  README.md  cch_algorithm.py  cch_example.py  cch_optimizations.md  cch_pathfinding_guide.md  crp_routing_system_design.md  deploy.sh  docker-compose.yml  go.mod  index.html  run_cch_demo.py  snake.js  system_architecture.md
cmd/server/: main.go
crp_router_example/: CMakeLists.txt  Dockerfile  crp_data_structures.hpp  crp_router.hpp  docker-compose.yml  main.cpp  performance_monitor.hpp  road_network.hpp
crp_router_example/nginx/: nginx.conf
include/: crp_query.hpp  customization.hpp  graph.hpp  overlay.hpp  router_service.hpp
internal/config/: config.go
pkg/crp/: engine.go
pkg/types/: types.go
src/: main.cpp
